# usenetsync

./: .dockerignore  .env.example  .env.pre_restore_20250825_133641  .gitattributes  .github_workflow.json  .gitignore  100_PERCENT_ACHIEVED.md  ACCESS_MANAGEMENT_DOCUMENTATION.md  ACTUAL_FOLDER_IMPLEMENTATION_GUIDE.md  ADDITIONAL_CRITICAL_COMPONENTS.md  ALL_FOLDER_ACTIONS_SUMMARY.md  API_DOCUMENTATION.md  API_DOCUMENTATION_COMPLETE.md  API_IMPROVEMENT_SUMMARY.md  AUTHORIZED_USERS_INTEGRATION.md  BUILD_WINDOWS_INSTALLER.md  CANCEL_AND_RERUN.md  CODEBASE_FUNCTIONALITY_REVIEW.md  CODEBASE_REVIEW.md  COMPLETE_FOLDER_IMPLEMENTATION.md  COMPLETE_FRONTEND_VERIFICATION.md  COMPLETE_GUI_TEST_RESULTS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_STATUS_REPORT.md  COMPLETE_SYSTEM_ASSESSMENT.md  COMPLETE_SYSTEM_TEST_RESULTS.md  COMPLETE_SYSTEM_VERIFICATION_REPORT.md  COMPLETE_UNIFICATION_SUMMARY.md  COMPLETE_WORKFLOW_SUMMARY.md  COMPLETE_WORKFLOW_TEST.md  COMPREHENSIVE_API_TEST_REPORT.md  COMPREHENSIVE_PRD.md  CONTRIBUTING.md  CRITICAL_FIXES_PLAN.md  CRITICAL_FUNCTIONALITY_PRESERVATION.md  CRITICAL_SYSTEM_REQUIREMENTS.md  CURSOR_IMPLEMENTATION_STATUS.md  CURSOR_RULES.md  DATABASE_ANALYSIS.md  DEDUPLICATION_COMPLETE.md  (+584 more)
.cursor/: rules.md
docs/: API.md  (+18 more)
usenet-sync-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
usenet-sync-app/src-tauri/capabilities/: default.json
usenet-sync-app/src-tauri/src/: main.rs  turboactivate.rs  unified_backend.rs
usenet-sync-app/src-tauri/src/commands/: system.rs
usenet-sync-app/src-tauri/src/identity/: mod.rs
usenet-sync-app/src-tauri/src/license/: mod.rs
usenet-sync-app/src-tauri/turboactivate/: README.md
usenet-sync-app/src-tauri/turboactivate/API/Adobe AIR/src/: AIRTester-app.xml  PKey.mxml  TurboActivate.as  TurboActivateEvent.as
usenet-sync-app/src-tauri/turboactivate/API/C/: Example.c  Example.vcxproj.filters  Getting started with TurboActivate & LimeLM.url  Using TurboActivate with C, C++, & Objective-C.url
usenet-sync-app/src-tauri/turboactivate/API/CSharp/WPF/: MainWindow.xaml  MainWindow.xaml.cs  ReVerifyNow.xaml
usenet-sync-app/src-tauri/turboactivate/API/CSharp/WinForms/: CSharp.csproj  Form1.cs
usenet-sync-app/src-tauri/turboactivate/API/Delphi/: TurboActivateUnit.pas
usenet-sync-app/src-tauri/turboactivate/API/Delphi/FireMonkey/: Firemonkey.Example.deployproj  Firemonkey.Example.dproj  PKey.pas  ReVerifyNow.fmx
usenet-sync-app/src-tauri/turboactivate/API/Delphi/VCL/: ReVerifyNow.dfm  TrialExtension.pas  frmMain.dfm
usenet-sync-app/src-tauri/turboactivate/API/Installers/Inno Setup/: TurboActivate.iss  Using TurboActivate with Inno Setup.url
usenet-sync-app/src-tauri/turboactivate/API/Java/: .classpath  .project  Java.userlibraries
usenet-sync-app/src-tauri/turboactivate/API/NodeJS/: package.json  turboactivate.js
usenet-sync-app/src-tauri/turboactivate/API/VB.NET/: Form1.vb  ReVerifyNow.Designer.vb
usenet-sync-app/src-tauri/turboactivate/API/VB6/: ReVerifyNow.frm  TrialExtension.frm  TurboActivate.bas  TurboActivate.cls  VB6.vbp
usenet-sync-app/src-tauri/turboactivate/API/VBA/: Using TurboActivate with Visual Basic for Applications (VBA).url  YourVBAProject.xlam  frmActivateOffline.frm  frmPKey.frm  frmReVerifyNow.frx  frmTrialExtension.frm
usenet-sync-app/src-tauri/turboactivate/API/Xojo (Real Basic)/: Using TurboActivate with Xojo (Real Basic).url
(+850 files in other folders)
