[package]
name = "usenet-sync-app"
version = "0.0.0"
description = "UsenetSync - Complete Secure File Synchronization"
authors = ["UsenetSync Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "fs-all", "path-all", "process-all", "os-all", "window-all", "clipboard-all", "dialog-all", "notification-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "uuid", "chrono"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Cryptography & Security
ed25519-dalek = "2.1"
sha3 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
keyring = "2.3"

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
async-nats = "0.33"
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# File System & Compression
notify = "6.1"
walkdir = "2.4"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
lz4 = "1.24"
zstd = "0.13"

# Serialization
bincode = "1.3"
rmp-serde = "1.1"
postcard = { version = "1.0", features = ["alloc"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
rayon = "1.8"
num_cpus = "1.16"
bytes = "1.5"
hex = "0.4"
base64 = "0.21"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress & Monitoring
indicatif = "0.17"
console = "0.15"

# Memory mapping for large files
memmap2 = "0.9"

# System information
sysinfo = "0.30"
whoami = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

